--- a/index.html
+++ b/index.html
@@ -4,36 +4,29 @@
     <meta charset="UTF-8">
     <title>My First sign up Page</title>
     <style>
+        body{
+            font-size: 25px;
+            background-color: #80BCBD;
+        }
         .c{ 
             
             position:relative;
-            left:700px;
-            top:100px;
-            font-size: 35px;
-            padding:40px;
-            margin: 30px;
+            top:150px;
+            left:500px;
             display:inline-block;
-            border:10px solid black;
-        
-        }
-        .email,.password{
-            padding: 10px;
+            border:10px solid #030637;
+            border-radius:15px;
+            padding:20px;
         }
         .submit{
             position:relative;
-            left:120px;
-            padding: 20px;
-            border-radius: 10px;
-            background-color:blue;
+            left:150px;
+            padding:10px;
+            border-radius:5px;
+            background-color:#0A1D56;
             border:none;
             color: white;
-        }
-        .field{
-            size:150px;
-            padding:10px;
-        }
-        .checkbox{
-            transform: scale(2);
+            font-size: 20px;
         }
     </style>
     </head>
@@ -44,7 +37,7 @@
                 <div class="email">
                     <label for="Email">email</label>
         <br/>
-                <input class="field" type="email" id="Email"placeholder="name@business.com" height="40px"><br/>
+                <input class="field" type="email" id="Email"placeholder="name@business.com" height="105px"><br/>
                 </div>
                 <div class="password">
                     <label for="password">password</label><br/>
@@ -55,7 +48,7 @@
                 <input class="checkbox" type="checkbox" id="check">
                    By clicking this you agree to all the <a href="">terms</a> & <a href="">policies</a>.<br/><br/>
                 <label for="sub"></label>
-                <input class="submit" type="submit" id="sub" value="Create Account"> 
+                <a href=""><input class="submit" type="submit" id="sub" value="Create Account"></a>
             </form>
         </div>
     </body>
